infra/nginx-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accessmanagement-ingress
  namespace: accessmanagement-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: http://arch.homework/auth
    nginx.ingress.kubernetes.io/auth-response-headers: x-user_id
spec:
  ingressClassName: nginx 
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: accessmanagement-service
                port:
                  number: 8080
          - path: /account
            pathType: Prefix
            backend:
              service:
                name: accessmanagement-service
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  namespace: auth-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx 
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: auth-service-medvisit-authserver
                port:
                  number: 8080

          - path: /register
            pathType: Prefix
            backend:
              service:
                name: auth-service-medvisit-authserver
                port:
                  number: 8080
                  
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service-medvisit-authserver
                port:
                  number: 8080
